--- a/numofbooksauthors/package.json
+++ b/numofbooksauthors/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "apollo-server": "^3.6.3",
     "apollo-server-core": "^3.6.3",
+    "dotenv": "^16.0.0",
     "graphql": "^16.3.0",
+    "mongoose": "^6.2.4",
     "uuid": "^8.3.2"
   }
 }
