--- a/numofbooksauthors/package.json
+++ b/numofbooksauthors/package.json
@@ -13,6 +13,7 @@
     "apollo-server-core": "^3.6.3",
     "dotenv": "^16.0.0",
     "graphql": "^16.3.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.4",
     "uuid": "^8.3.2"
   }
